--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<hl>Hola mundo<h\l>
+<html>
+<head></head>
+  <body>
+    <h1>Hola Mundo</h1>
+  <body>  
+  <head>
+    <title>Hola mundo</title>
+  <head>
+  <boddy>
+    <hl>Hola mundo</hl>
+    <p> Esto me gusta mucho.</p>
+    <body>
+<html>
