--- a/usabilidad/usabilidad.html
+++ b/usabilidad/usabilidad.html
@@ -337,47 +337,47 @@
     <tbody>
       <tr>
         <td>1. Creo que me gustaría utilizar este sistema frecuentemente.</td>
-        <td>5</td>
+        <td>4</td>
       </tr>
       <tr>
         <td>2. El sistema me resultó innecesariamente complejo.</td>
-        <td>2</td>
+        <td>1</td>
       </tr>
       <tr>
         <td>3. Creo que el sistema es bastante fácil de utilizar.</td>
-        <td></td>
+        <td>3</td>
       </tr>
       <tr>
         <td>4. Creo que necesitaría el soporte de un técnico para poder utilizar este sistema.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>5. Creo que las diferentes funciones del sistema se encuentran muy bien integradas.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>6. Opino que hubo demasiada inconsistencia en el sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>7. Imagino que la mayoría de las personas aprendería a utilizar el sistema rápidamente.</td>
-        <td></td>
+        <td>3</td>
       </tr>
       <tr>
         <td>8. Me sentí algo incómodo al utilizar este sistema.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>9. Me sentí muy seguro al utilizar este sistema.</td>
-        <td></td>
+        <td>3</td>
       </tr>
       <tr>
         <td>10. Necesito aprender muchas otras cosas antes de poder utilizar correctamente el sistema.</td>
-        <td></td>
+        <td>3</td>
       </tr>
       <tr>
         <td>TOTALSystem Usability Scale (SUS)</td>
-        <td>67.5</td>
+        <td>47.5</td>
       </tr>
       <tr>
         <td> URL</td>
@@ -403,54 +403,54 @@
       </tr>
       <tr>
         <td>2. El sistema me resultó innecesariamente complejo.</td>
-        <td>2</td>
+        <td>1</td>
       </tr>
       <tr>
         <td>3. Creo que el sistema es bastante fácil de utilizar.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>4. Creo que necesitaría el soporte de un técnico para poder utilizar este sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>5. Creo que las diferentes funciones del sistema se encuentran muy bien integradas.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>6. Opino que hubo demasiada inconsistencia en el sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>7. Imagino que la mayoría de las personas aprendería a utilizar el sistema rápidamente.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>8. Me sentí algo incómodo al utilizar este sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>9. Me sentí muy seguro al utilizar este sistema.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>10. Necesito aprender muchas otras cosas antes de poder utilizar correctamente el sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>TOTALSystem Usability Scale (SUS)</td>
-        <td>67.5</td>
+        <td>100</td>
       </tr>
       <tr>
         <td> URL</td>
-        <td><a href="https://www.televisa.com/">Enlace a TELEVISA</a></td>
+        <td><a href="https://www.pirma.com.mx/">Enlace a PIRMA</a></td>
       </tr>
     </tbody>
   </table>
 </div>
 <br>
 <div class="container">
-  <h1 class="stiloslabel1">COCA COLA</h1>
+  <h1 class="stiloslabel1">COCA-COLA</h1>
   <table class="table table-bordered table-sm">
     <thead>
       <tr>
@@ -461,58 +461,58 @@
     <tbody>
       <tr>
         <td>1. Creo que me gustaría utilizar este sistema frecuentemente.</td>
-        <td>5</td>
+        <td>4</td>
       </tr>
       <tr>
         <td>2. El sistema me resultó innecesariamente complejo.</td>
-        <td>2</td>
+        <td>4</td>
       </tr>
       <tr>
         <td>3. Creo que el sistema es bastante fácil de utilizar.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>4. Creo que necesitaría el soporte de un técnico para poder utilizar este sistema.</td>
-        <td></td>
+        <td>3</td>
       </tr>
       <tr>
         <td>5. Creo que las diferentes funciones del sistema se encuentran muy bien integradas.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>6. Opino que hubo demasiada inconsistencia en el sistema.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>7. Imagino que la mayoría de las personas aprendería a utilizar el sistema rápidamente.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>8. Me sentí algo incómodo al utilizar este sistema.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>9. Me sentí muy seguro al utilizar este sistema.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>10. Necesito aprender muchas otras cosas antes de poder utilizar correctamente el sistema.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>TOTALSystem Usability Scale (SUS)</td>
-        <td>67.5</td>
+        <td>35</td>
       </tr>
       <tr>
         <td> URL</td>
-        <td><a href="https://www.televisa.com/">Enlace a TELEVISA</a></td>
+        <td><a href="https://www.coca-colamexico.com.mx/">Enlace a COCA-COLA</a></td>
       </tr>
     </tbody>
   </table>
 </div>
 <br>
 <div class="container">
-  <h1 class="stiloslabel1">BOING</h1>
+  <h1 class="stiloslabel1">AT&T</h1>
   <table class="table table-bordered table-sm">
     <thead>
       <tr>
@@ -523,47 +523,51 @@
     <tbody>
       <tr>
         <td>1. Creo que me gustaría utilizar este sistema frecuentemente.</td>
-        <td>5</td>
+        <td>4</td>
       </tr>
       <tr>
         <td>2. El sistema me resultó innecesariamente complejo.</td>
-        <td>2</td>
+        <td>1</td>
       </tr>
       <tr>
         <td>3. Creo que el sistema es bastante fácil de utilizar.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>4. Creo que necesitaría el soporte de un técnico para poder utilizar este sistema.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>5. Creo que las diferentes funciones del sistema se encuentran muy bien integradas.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>6. Opino que hubo demasiada inconsistencia en el sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>7. Imagino que la mayoría de las personas aprendería a utilizar el sistema rápidamente.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>8. Me sentí algo incómodo al utilizar este sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>9. Me sentí muy seguro al utilizar este sistema.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>10. Necesito aprender muchas otras cosas antes de poder utilizar correctamente el sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
-        <td stroner>TOTAL</td>
-        <td> </td>
+        <td>TOTALSystem Usability Scale (SUS)</td>
+        <td>85</td>
+      </tr>
+      <tr>
+        <td> URL</td>
+        <td><a href="https://www.att.com/">Enlace a AT&T</a></td>
       </tr>
     </tbody>
   </table>
@@ -585,43 +589,47 @@
       </tr>
       <tr>
         <td>2. El sistema me resultó innecesariamente complejo.</td>
-        <td>2</td>
+        <td>1</td>
       </tr>
       <tr>
         <td>3. Creo que el sistema es bastante fácil de utilizar.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>4. Creo que necesitaría el soporte de un técnico para poder utilizar este sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>5. Creo que las diferentes funciones del sistema se encuentran muy bien integradas.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>6. Opino que hubo demasiada inconsistencia en el sistema.</td>
-        <td></td>
+        <td>1</td>
       </tr>
       <tr>
         <td>7. Imagino que la mayoría de las personas aprendería a utilizar el sistema rápidamente.</td>
-        <td></td>
+        <td>4</td>
       </tr>
       <tr>
         <td>8. Me sentí algo incómodo al utilizar este sistema.</td>
-        <td></td>
+        <td>2</td>
       </tr>
       <tr>
         <td>9. Me sentí muy seguro al utilizar este sistema.</td>
-        <td></td>
+        <td>5</td>
       </tr>
       <tr>
         <td>10. Necesito aprender muchas otras cosas antes de poder utilizar correctamente el sistema.</td>
-        <td></td>
+        <td>3</td>
       </tr>
       <tr>
-        <td stroner>TOTAL</td>
-        <td> </td>
+        <td>TOTALSystem Usability Scale (SUS)</td>
+        <td>85</td>
+      </tr>
+      <tr>
+        <td> URL</td>
+        <td><a href="https://www.nestle.com/">Enlace a NESTLE</a></td>
       </tr>
     </tbody>
   </table>
