--- a/semana-7/tienda.html
+++ b/semana-7/tienda.html
@@ -2,7 +2,9 @@
 <html lang="es">
   <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css" media="screen"/>
+    <link rel="stylesheet" type="text/css" href="css/sweetalert2.min.css" media="screen"/>
     <script type="text/javascript" src="js/carrito.js" charset="utf-8"></script>
+    <script type="text/javascript" src="js/sweetalert2.all.min.js" charset="utf-8"></script>
     <title>TIENDA</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
