--- a/semana-1/elementos.html
+++ b/semana-1/elementos.html
@@ -1,5 +1,5 @@
 <html>
-<head></head>
+  <head></head>
   <body>
     <h1>Estructura básica de una pagina web</h1>
   <body>  
@@ -22,3 +22,5 @@
 
     <h2 style="color:BLUE" onclick="changeColor(this.parentNode)">¿Para que sirve (>boddy<)?</h2>
           <p><strong> Indica la parte del cuerpo del contenido de un documento HTML. Es una etiqueta esencial para cualquier documento ya que indica donde empieza el contenido visible del documento. 
+  </boddy>
+</html>
